# aiohttp-small-snippet

./: .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
micro_api/: __init__.py  __main__.py  api-spec.yml  app.py  faust_app.py  handlers.py  logging.yml  utils.py
