[metadata]
name = micro_api
version = attr: micro_api.__version__
url = https://github.com/auliantsev/micro_api
description = Micro api by aiohttp
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = micro_api
python_requires = >= 3.7

[pycodestyle]
max_line_length = 100

[mypy]
ignore_missing_imports = True
